2010-03-17   Romain Francois <romain@r-enthusiasts.com>

	* src/fastLm.cpp: added some arma:: prefix
	
	* src/RcppArmadillo.cpp: update examples to use make_list and showcase
	various ways to use them : Named(.)=., _[.] = , Named( ., . )

2010-03-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.1.0 and initial CRAN upload

2010-03-03  Dirk Eddelbuettel  <edd@debian.org>

	* src/fastLm.cpp: Moved into its own file, some more polish

2010-03-03  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/RcppArmadillo.h: avoid an extra memory copy when
	possible (i.e. in wrap( eGlue) and wrap( eOp ) when the elem_type
	is int or double).

	* inst/include/RcppArmadilloDefines.in.h added the SCALAR macro
	to take care of the 0.9.0 api change

	* src/RcppArmadillo.cpp : fix a runtime error uisng the SCALAR macro

2010-03-02  Dirk Eddelbuettel  <edd@dexter>

	* src/RcppArmadillo.cpp: Added bare-bones 'fastLm' function
	* R/fastLm.R: Added fastLm R wrapper for C++ fastLm
	* man/fastLm.Rd: Added manual page
	* inst/unitTests/runit.RcppArmadillo.R: Added unit test
	* NAMESPACE: Made fastLm visible

2010-03-02  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/RcppArmadillo.h: support for Armadillo 0.9.*

2010-03-01  Dirk Eddelbuettel  <edd@debian.org>

	* configure.in: Add configure support to test for version 0.9.0

2010-02-23  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/RcppArmadillo.h: support for wrap( arma::Glue )
	and wrap( arma::Op ) enabling wrap()'ing arbitrary expressions
	involving arma::Mat objects, for example wrap( m1 + m2 ), or
	wrap( -m1 )

	* inst/unitTests/runit.RcppArmadillo.R: new unit test for
	wrap( Glue ) and wrap( Op )

2010-02-20  Dirk Eddelbuettel  <edd@debian.org>

	* configure.in: Add configure support to test for presence of
	  'armadillo' header and working 'libarmadillo' library; and
	  a test for version 0.7.0 or higher (for Cube() type)
	* src/Makevars.in: Setup to be filled-in from configure